--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "body-parser": "^1.13.1",
     "bunyan": "^1.4.0",
     "config": "^1.14.0",
+    "cookie-session": "^1.1.0",
     "express": "^4.12.3",
     "express-handlebars": "^2.0.1",
-    "express-session": "^1.10.4",
     "js-yaml": "^3.3.1",
     "lodash": "^3.9.3",
     "morgan": "^1.6.0",
